# fold-server

./: .gitignore  CONTRIBUTING.md  Dockerfile.dev  Dockerfile.jvm  Dockerfile.native  Dockerfile.native-build  Dockerfile.preview  README.md  WARP.md
.github/: CODEOWNERS
.github/workflows/: build-image.yml  ci.yml  desktop.yml  preview.yml  release.yml
client/: WARP.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
client/scripts/: subset-icons.py
client/src/: app.css  app.html
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/picker/: index.html
client/src-tauri/src/: bundle_cache.rs  commands.rs  lib.rs  main.rs  servers.rs  tray.rs
client/src/lib/: icons.ts  notifications.ts  permissions.ts
client/src/lib/api/: audit.ts  auth.ts  (+19 more)
client/src/routes/: +layout.svelte  +page.svelte
deploy/: entrypoint-preview.sh
deploy/nomad/: fold-preview.nomad.hcl  fold.nomad.hcl  kith-preview.nomad.hcl  kith.nomad.hcl
docs/: client-patterns.md  permissions.md  server-patterns.md
server/: WARP.md  build.gradle.kts  gradle.properties  settings.gradle.kts
tools/fold-mcp/: package.json  pnpm-lock.yaml  seed.mjs
tools/fold-mcp/src/: index.ts
tools/kith-mcp/: package.json  tsconfig.json
tools/kith-mcp/src/: index.ts
tools/loadtest/: README.md  package.json  pnpm-lock.yaml  report.csv  report.json
tools/loadtest/profiles/: default.yaml
tools/loadtest/src/: client.ts  config.ts  index.ts  metrics.ts  personas.ts  preseed.ts
(+413 files in other folders)
