[package]
name = "fold-desktop"
version = "0.1.0"
description = "Fold desktop client"
authors = []
license = "AGPL-3.0"
edition = "2021"

[lib]
name = "fold_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["webview-data-url", "unstable", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-store = "2.4.2"
uuid = { version = "1.20.0", features = ["v7"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "stream", "json"] }
flate2 = "1"
tar = "0.4"
tokio = { version = "1", features = ["fs"] }
url = "2"
open = "5.3.3"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-window-state = "2"
tauri-plugin-process = "2"
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSColor", "NSWindow", "NSApplication", "NSDockTile", "NSRunningApplication"] }
objc2-foundation = "0.3"
